--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 }
 body {
   font-family: "Combo", cursive;
-  background-color: #062c5f;
-  color: #ffffff;
+  background-color: #a7c5eb;
+  color: #cd5d7d;
   margin: 0;
 }
 .footer{
