--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
 }
 body {
   font-family: "Roboto", cursive;
-  background-color: #00122b;
-  color: #ffffff;
+  background-color: #fafafa;
+  color: #000000;
   margin: 0;
 }
 .footer{
     padding: 20px;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 .container {
   margin: auto;
