--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
   box-sizing: border-box;
 }
 body {
-  font-family: "Roboto", cursive;
+  font-family: "roboto", cursive;
   background-color: #fafafa;
   color: #000000;
   margin: 0;
 }
 .footer{
     padding: 20px;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 .container {
   margin: auto;
