--- a/style.css
+++ b/style.css
@@ -51,6 +51,13 @@ input[type="text"] {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
+}
+.showmore-btn {
+  cursor: pointer;
+  margin-left: 30px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
 .meals {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
